--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "each-async": "^1.1.1",
     "express": "^4.13.4",
     "glob": "^6.0.4",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-minify-css": "^1.2.3",
+    "gulp-minify-html": "^1.0.5",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^1.0.0",
     "gulp-util": "^3.0.7",
