--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,16 @@
+
+# http://editorconfig.org
+
 # top-most EditorConfig file
 root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
 end_of_line = lf
-insert_final_newline = true
+trim_trailing_whitespace = true
+
+# utf-8 encoding and 2 space indentation
+[*.*]
 charset = utf-8
 indent_style = space
-
-[*.js]
-indent_size = 4
-
-[*.scss]
-indent_size = 4
-
-[*.json]
 indent_size = 2
