--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "deploy": "gh-pages -d dist"
   },
   "license": "NONE",
-  "dependencies": {},
+  "dependencies": {
+    "date-fns": "2.19.0"
+  },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "1.0.0-next.5",
+    "@tailwindcss/jit": "0.1.18",
     "@tsconfig/svelte": "1.0.10",
     "@typescript-eslint/eslint-plugin": "4.20.0",
     "@typescript-eslint/parser": "4.20.0",
+    "autoprefixer": "10.2.5",
     "eslint": "7.23.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-import-resolver-typescript": "2.4.0",
@@ -28,9 +32,11 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "gh-pages": "3.1.0",
+    "postcss": "8.2.9",
     "prettier": "2.2.1",
     "svelte": "3.37.0",
     "svelte-preprocess": "4.7.0",
+    "tailwindcss": "2.0.4",
     "typescript": "4.2.3",
     "vite": "2.1.5"
   }
