ci: deploy main to pages

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,9 @@ name: ci
 on:
   push:
     branches:
-      - '*'
+      - "*"
     tags-ignore:
-      - 'v*.*.*'
+      - "v*.*.*"
 
 jobs:
   validate:
@@ -22,3 +22,9 @@ jobs:
       - run: npm install
       - run: npm run lint
       - run: npm run build
+      - name: Deploy 🚀
+        if: github.ref == 'refs/heads/main'
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages
+          folder: dist
