--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
           restore-keys: ${{ runner.os }}-npm-
       - run: npm install
       - run: npm run lint
+      - run: npm run format:check
       - run: npm run build
       - name: Deploy 🚀
         if: github.ref == 'refs/heads/main'
