--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint ./src --ext .ts",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write \"./**\"",
+    "format:check": "prettier --check \"./**\"",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "prepare": "husky install"
   },
   "license": "NONE",
   "dependencies": {
@@ -32,12 +36,19 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "gh-pages": "3.1.0",
+    "husky": "6.0.0",
+    "lint-staged": "10.5.4",
     "postcss": "8.2.9",
     "prettier": "2.2.1",
+    "prettier-plugin-svelte": "2.2.0",
+    "pretty-quick": "3.1.0",
     "svelte": "3.37.0",
     "svelte-preprocess": "4.7.0",
     "tailwindcss": "2.0.4",
     "typescript": "4.2.3",
     "vite": "2.1.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
   }
 }
