--- a/package.json
+++ b/package.json
@@ -18,16 +18,15 @@
     "deploy": "gh-pages -d dist",
     "prepare": "husky install"
   },
-  "license": "NONE",
+  "license": "MIT",
   "dependencies": {
-    "date-fns": "2.19.0"
+    "date-fns": "2.20.0"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.5",
-    "@tailwindcss/jit": "0.1.18",
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.6",
     "@tsconfig/svelte": "1.0.10",
-    "@typescript-eslint/eslint-plugin": "4.20.0",
-    "@typescript-eslint/parser": "4.20.0",
+    "@typescript-eslint/eslint-plugin": "4.21.0",
+    "@typescript-eslint/parser": "4.21.0",
     "autoprefixer": "10.2.5",
     "eslint": "7.23.0",
     "eslint-config-prettier": "8.1.0",
@@ -44,8 +43,8 @@
     "pretty-quick": "3.1.0",
     "svelte": "3.37.0",
     "svelte-preprocess": "4.7.0",
-    "tailwindcss": "2.0.4",
-    "typescript": "4.2.3",
+    "tailwindcss": "2.1.1",
+    "typescript": "4.2.4",
     "vite": "2.1.5"
   },
   "lint-staged": {
