--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cv-website",
   "version": "0.0.1",
+  "license": "MIT",
   "homepage": "https://egilsster.github.io/cv-website",
   "repository": {
     "type": "git",
@@ -12,40 +13,39 @@
     "serve": "vite preview",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "npm run lint -- --fix",
-    "format": "prettier --write \"./**\"",
+    "format:write": "prettier --write \"./**\"",
     "format:check": "prettier --check \"./**\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "prepare": "husky install"
   },
-  "license": "MIT",
   "dependencies": {
-    "date-fns": "2.22.1"
+    "date-fns": "2.28.0"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.11",
-    "@tsconfig/svelte": "2.0.1",
-    "@typescript-eslint/eslint-plugin": "4.27.0",
-    "@typescript-eslint/parser": "4.27.0",
-    "autoprefixer": "10.2.6",
-    "eslint": "7.28.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-typescript": "2.4.0",
-    "eslint-plugin-import": "2.23.4",
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.40",
+    "@tsconfig/svelte": "3.0.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "autoprefixer": "10.4.4",
+    "eslint": "8.12.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "gh-pages": "3.2.1",
-    "husky": "6.0.0",
-    "lint-staged": "11.0.0",
-    "postcss": "8.3.4",
-    "prettier": "2.3.1",
-    "prettier-plugin-svelte": "2.3.0",
-    "pretty-quick": "3.1.0",
-    "svelte": "3.38.2",
-    "svelte-preprocess": "4.7.3",
-    "tailwindcss": "2.1.4",
-    "typescript": "4.3.2",
-    "vite": "2.3.7"
+    "eslint-plugin-prettier": "4.0.0",
+    "gh-pages": "3.2.3",
+    "husky": "7.0.4",
+    "lint-staged": "12.3.7",
+    "postcss": "8.4.12",
+    "prettier": "2.6.2",
+    "prettier-plugin-svelte": "2.6.0",
+    "pretty-quick": "3.1.3",
+    "svelte": "3.46.6",
+    "svelte-preprocess": "4.10.4",
+    "tailwindcss": "3.0.23",
+    "typescript": "4.6.3",
+    "vite": "2.9.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
