--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
       - run: npm install
       - run: npm run lint
       - run: npm run format:check
+      - run: npm run types:check
       - run: npm run build
       - name: Deploy 🚀
         if: github.ref == 'refs/heads/main'
