--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "lint": "eslint ./src --ext .ts",
+    "lint": "eslint ./src",
     "lint:fix": "npm run lint -- --fix",
     "format:write": "prettier --write \"./**\"",
     "format:check": "prettier --check \"./**\"",
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-svelte": "2.7.0",
     "gh-pages": "4.0.0",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
