--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": ["src/**/*", "types", "vite.config.ts"],
+  "include": ["src/**/*", "types", "vite.config.ts", ".eslintrc.js"],
   "exclude": ["node_modules/*", "build/*", "public/*"],
   "compilerOptions": {
     "module": "esnext",
