--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/egilsster/cv-website"
   },
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,39 +18,32 @@
     "format:check": "prettier --check \"./**\"",
     "types:check": "tsc --noEmit",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "prepare": "husky install"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "date-fns": "2.29.2"
+    "date-fns": "2.30.0"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "1.0.4",
-    "@tsconfig/svelte": "3.0.0",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
-    "autoprefixer": "10.4.8",
-    "eslint": "8.23.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "3.5.0",
-    "eslint-plugin-import": "2.26.0",
+    "@sveltejs/vite-plugin-svelte": "2.4.2",
+    "@tsconfig/svelte": "5.0.0",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.44.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-svelte": "2.7.0",
-    "gh-pages": "4.0.0",
-    "husky": "8.0.1",
-    "lint-staged": "13.0.3",
-    "postcss": "8.4.16",
-    "prettier": "2.7.1",
-    "prettier-plugin-svelte": "2.7.0",
-    "pretty-quick": "3.1.3",
-    "svelte": "3.50.0",
-    "svelte-preprocess": "4.10.7",
-    "tailwindcss": "3.1.8",
-    "typescript": "4.8.2",
-    "vite": "3.2.7"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
+    "eslint-plugin-svelte": "2.32.2",
+    "gh-pages": "5.0.0",
+    "postcss": "8.4.25",
+    "prettier": "2.8.8",
+    "prettier-plugin-svelte": "2.10.1",
+    "svelte": "4.0.5",
+    "svelte-preprocess": "5.0.4",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6",
+    "vite": "4.4.2"
   }
 }
