--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: 18
           cache: pnpm
-      - run: pnpm ci
+      - run: pnpm install
       - run: pnpm lint
       - run: pnpm format:check
       - run: pnpm types:check
