--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,21 +12,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
+      - uses: oven-sh/setup-bun@v1
         with:
-          version: 8
-      - uses: actions/setup-node@v3
+          bun-version: latest
+      - run: bun install
+      - run: bun lint
+      - run: bun format:check
+      - run: bun types:check
+      - run: bun run build
+      - name: Upload Pages Artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          node-version: 18
-          cache: pnpm
-      - run: pnpm install
-      - run: pnpm lint
-      - run: pnpm format:check
-      - run: pnpm types:check
-      - run: pnpm build
-      - name: deploy to github pages
-        if: github.ref == 'refs/heads/main'
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          branch: gh-pages
-          folder: dist
+          name: github-pages
+          path: ./dist
+
+  deploy:
+    if: github.ref == 'refs/heads/main'
+    needs: validate
+    runs-on: ubuntu-latest
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write # to deploy to Pages
+      id-token: write # to verify the deployment originates from an appropriate source
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
