--- a/package.json
+++ b/package.json
@@ -13,37 +13,32 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint .",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "bun run lint -- --fix",
     "format:write": "prettier --write \"./**\"",
     "format:check": "prettier --check \"./**\"",
-    "types:check": "tsc --noEmit",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "types:check": "tsc --noEmit"
   },
   "dependencies": {
     "date-fns": "2.30.0"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "2.4.2",
-    "@tsconfig/svelte": "5.0.0",
-    "@typescript-eslint/eslint-plugin": "5.61.0",
-    "@typescript-eslint/parser": "5.61.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-import-resolver-typescript": "3.5.5",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-svelte": "2.32.2",
-    "gh-pages": "5.0.0",
-    "postcss": "8.4.25",
-    "prettier": "2.8.8",
-    "prettier-plugin-svelte": "2.10.1",
-    "svelte": "4.0.5",
+    "@sveltejs/vite-plugin-svelte": "2.4.5",
+    "@tsconfig/svelte": "5.0.2",
+    "@typescript-eslint/eslint-plugin": "6.6.0",
+    "@typescript-eslint/parser": "6.6.0",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.49.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-svelte": "2.33.1",
+    "postcss": "8.4.29",
+    "prettier": "3.0.3",
+    "prettier-plugin-svelte": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "svelte": "4.2.0",
     "svelte-preprocess": "5.0.4",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.6",
-    "vite": "4.4.2"
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
+    "vite": "4.4.9"
   }
 }
