--- a/package.json
+++ b/package.json
@@ -12,33 +12,27 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "lint": "eslint .",
-    "lint:fix": "bun run lint -- --fix",
     "format:write": "prettier --write \"./**\"",
     "format:check": "prettier --check \"./**\"",
+    "svelte-check": "svelte-check",
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
-    "date-fns": "2.30.0"
+    "date-fns": "3.0.6"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "2.4.5",
+    "@sveltejs/vite-plugin-svelte": "3.0.1",
     "@tsconfig/svelte": "5.0.2",
-    "@typescript-eslint/eslint-plugin": "6.6.0",
-    "@typescript-eslint/parser": "6.6.0",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.49.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-svelte": "2.33.1",
-    "postcss": "8.4.29",
-    "prettier": "3.0.3",
-    "prettier-plugin-svelte": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "svelte": "4.2.0",
-    "svelte-preprocess": "5.0.4",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "vite": "4.4.9"
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.32",
+    "prettier": "3.1.1",
+    "prettier-plugin-svelte": "3.1.2",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "svelte": "4.2.8",
+    "svelte-check": "^3.6.2",
+    "svelte-preprocess": "5.1.3",
+    "tailwindcss": "3.4.0",
+    "typescript": "5.3.3",
+    "vite": "5.0.10"
   }
 }
