--- a/package.json
+++ b/package.json
@@ -13,26 +13,24 @@
     "build": "vite build",
     "serve": "vite preview",
     "format:write": "prettier --write \"./**\"",
-    "format:check": "prettier --check \"./**\"",
-    "svelte-check": "svelte-check",
-    "types:check": "tsc --noEmit"
+    "format:check": "prettier --check \"./**\""
   },
   "dependencies": {
-    "date-fns": "3.0.6"
+    "date-fns": "3.2.0"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "3.0.1",
     "@tsconfig/svelte": "5.0.2",
     "autoprefixer": "10.4.16",
-    "postcss": "8.4.32",
+    "postcss": "8.4.33",
     "prettier": "3.1.1",
     "prettier-plugin-svelte": "3.1.2",
-    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prettier-plugin-tailwindcss": "0.5.11",
     "svelte": "4.2.8",
     "svelte-check": "^3.6.2",
     "svelte-preprocess": "5.1.3",
-    "tailwindcss": "3.4.0",
+    "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
-    "vite": "5.0.10"
+    "vite": "5.0.11"
   }
 }
