--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "date-fns": "3.2.0"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "3.0.1",
+    "@sveltejs/vite-plugin-svelte": "5.0.3",
     "@tsconfig/svelte": "5.0.2",
     "autoprefixer": "10.4.16",
     "postcss": "8.4.33",
     "prettier": "3.1.1",
-    "prettier-plugin-svelte": "3.1.2",
+    "prettier-plugin-svelte": "3.3.3",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "svelte": "4.2.19",
-    "svelte-check": "^3.6.2",
-    "svelte-preprocess": "5.1.3",
+    "svelte": "5.20.2",
+    "svelte-check": "4.1.4",
+    "svelte-preprocess": "6.0.3",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
-    "vite": "5.1.8"
+    "typescript": "^5.5.0",
+    "vite": "6.1.1"
   }
 }
