--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           bun-version: latest
       - run: bun install
-      - run: bun run format:check
+      - run: bun run check
       - run: bun run build
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v3
