--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
+    "check": "bun run format:check && bun run svelte:check",
+    "svelte:check": "svelte-check",
     "format:write": "prettier --write \"./**\"",
     "format:check": "prettier --check \"./**\""
   },
@@ -20,16 +22,14 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "5.0.3",
-    "@tsconfig/svelte": "5.0.2",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.33",
+    "@tailwindcss/vite": "4.0.8",
+    "@tsconfig/svelte": "5.0.4",
     "prettier": "3.1.1",
     "prettier-plugin-svelte": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.5.11",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "svelte": "5.20.2",
     "svelte-check": "4.1.4",
-    "svelte-preprocess": "6.0.3",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "4.0.8",
     "typescript": "^5.5.0",
     "vite": "6.1.1"
   }
