--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": ["src/**/*", "types", "*.config.ts", "**.cjs", "svelte.config.js"],
+  "include": ["**/*", "*"],
   "exclude": ["node_modules/*", "build/*", "public/*"],
   "compilerOptions": {
-    "isolatedModules": true,
-    "module": "esnext",
     "types": ["svelte"]
   }
 }
